fixed scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -204,7 +204,6 @@ a {
         height: 92vh;
         margin: 0 auto;
         padding: 3vw;
-        overflow-y: auto;
         overflow-x: hidden;
         /* Deco */
         background-color: var(--background-color);
@@ -424,95 +423,3 @@ a {
     border-radius: 10px;
 }
 
-/* TEST */
-
-.container {
-    position: relative;
-    width: 320px;
-    margin: 100px auto 0 auto;
-    perspective: 1000px;
-}
-
-.carousel {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    animation: rotate360 60s infinite forwards linear;
-}
-
-.carousel__face {
-    position: absolute;
-    width: 150px;
-    height: 140px;
-    top: 20px;
-    left: 10px;
-    right: 10px;
-    background-size: cover;
-    border-radius: 100px;
-    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
-    display: flex;
-}
-
-div span {
-    margin: auto;
-    font-size: 2rem;
-}
-
-
-.carousel__face:nth-child(1) {
-    background-image: url("./assets/icons/express.svg");
-    transform: rotateY(0deg) translateZ(430px);
-}
-
-.carousel__face:nth-child(2) {
-    background-image: url("./assets/icons/javascript.svg");
-    transform: rotateY(40deg) translateZ(430px);
-}
-
-.carousel__face:nth-child(3) {
-    background-image: url("./assets/icons/express.svg");
-    transform: rotateY(80deg) translateZ(430px);
-}
-
-.carousel__face:nth-child(4) {
-    background-image: url("./assets/icons/express.svg");
-    transform: rotateY(120deg) translateZ(430px);
-}
-
-.carousel__face:nth-child(5) {
-    background-image: url("./assets/icons/express.svg");
-    transform: rotateY(160deg) translateZ(430px);
-}
-
-.carousel__face:nth-child(6) {
-    background-image: url("./assets/icons/express.svg");
-    transform: rotateY(200deg) translateZ(430px);
-}
-
-.carousel__face:nth-child(7) {
-    background-image: url("./assets/icons/express.svg");
-    transform: rotateY(240deg) translateZ(430px);
-}
-
-.carousel__face:nth-child(8) {
-    background-image: url("./assets/icons/express.svg");
-    transform: rotateY(280deg) translateZ(430px);
-}
-
-.carousel__face:nth-child(9) {
-    background-image: url("./assets/icons/express.svg  ");
-    transform: rotateY(320deg) translateZ(430px);
-}
-
-
-
-@keyframes rotate360 {
-    from {
-        transform: rotateY(0deg);
-    }
-
-    to {
-        transform: rotateY(-360deg);
-    }
-}
